# xvarmap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
xvarmap/: __init__.py  core.py
